[project]
name = "md2pdf"
version = "0.1.0"
description = "Convert markdown files to professional PDFs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown>=3.5",
    "weasyprint>=60.0",
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
md2pdf = "md2pdf.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2pdf"]
